writing auth docs using swagger
